[project]
name = "faceswap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "tk>=0.1.0",
]
